# cmake

./: README.md
1/: CMakeLists.txt  README.md  foo.cc  foo.h  main.cc
2/: CMakeLists.txt  README.md  foo.cc
3/: CMakeLists.txt  README.md  main.cc
3/lib/: CMakeLists.txt  shape.cc
4/: CMakeLists.txt  README.md  main.cc
4/includes/: shape.h
5/: CMakeLists.txt  README.md  main.cc
5/includes/: hello.h
5/lib/: CMakeLists.txt  shape.cc
6/: CMakeLists.txt  README.md  main.cc
6/includes/: color.h
6/lib/: CMakeLists.txt  shape.cc
7/: CMakeLists.txt  README.md  main.cc
7/lib/: color.cc
template/: CMakeLists.txt
template/app/: CMakeLists.txt
template/lib/: CMakeLists.txt  hello.cc  shape.cc
